update: added loops&list and fixes

--- a/Python/Loops&ListComprehension.ipynb
+++ b/Python/Loops&ListComprehension.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
    "source": [
     "s = 'steganograpHy is the practicE of conceaLing a file, message, image, or video within another fiLe, message, image, Or video.'\n",
     "msg = ''\n",
-    "# printa todos os caractéres maiúsculos da string\n",
+    "# imprime todos os caracteres maiúsculos da string\n",
     "for char in s:\n",
     "    if char.isupper():\n",
     "        print(char, end='') "
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -124,6 +124,354 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### while loops\n",
+    "Outro tipo de loop em Python é o while loop, o qual itera até que alguma condição seja verdadeira:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 5 6 7 8 9 "
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "while i < 10:\n",
+    "    print(i, end=' ')\n",
+    "    i += 1 # aumenta o valor de i para +1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O argumento do while loop é avaliado como um estado booleano, e o loop é executado até que o boolean seja falso."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### List comprehensions\n",
+    "List comprehensions é uma das features mais amadas e únicas do Python. O jeito mais fácil de entender elas é apenas olhando para alguns exemplos:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
+     ]
+    }
+   ],
+   "source": [
+    "squares = [n**2 for n in range(10)]\n",
+    "print(squares)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aqui está como podemos fazer a mesma coisa sem utilizar list comprehensions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
+     ]
+    }
+   ],
+   "source": [
+    "squares = []\n",
+    "for n in range(10):\n",
+    "    squares.append(n**2)\n",
+    "print(squares)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podemos também colocar condições if dentro de list comprehensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Venus', 'Earth', 'Mars']\n"
+     ]
+    }
+   ],
+   "source": [
+    "short_planets = [planet for planet in planets if len(planet) < 6]\n",
+    "print(short_planets)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(se você é familiar com SQL, você pode pensar nisso como uma clausula \"WHERE\")\n",
+    "\n",
+    "Aqui está um exemplo de filtragem utilizando o condicional if e aplicando uma transformação para a variável de loop:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['VENUS!', 'EARTH!', 'MARS!']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# str.upper() retorna uma versão all-caps de uma string\n",
+    "loud_short_planets = [\n",
+    "    planet.upper() + '!' \n",
+    "    for planet in planets \n",
+    "    if len(planet) < 6\n",
+    "    ]\n",
+    "print(loud_short_planets)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A expressão da esquerda não precisa tecnicamente envolver a variável de loop (porém é bem incomum não ser utilizada). O que você pensa que a expressão abaixo será avaliada?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[32, 32, 32, 32, 32, 32, 32, 32]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[32 for planet in planets]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "List comprehensions combinadas com funções como min, max e sum podem ser soluções de uma linha incríveis que se não feita com elas, requer várias linhas de código. \n",
+    "\n",
+    "Por exemplo, compare as duas células de código que fazem a mesma coisa:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_negatives(nums):\n",
+    "    \"\"\"Return the number of negative numbers in the given list.\n",
+    "    \n",
+    "    >>> count_negatives([5, -1, -2, 0, 3])\n",
+    "    2\n",
+    "    \"\"\"\n",
+    "    n_negative = 0\n",
+    "    for num in nums:\n",
+    "        if num < 0:\n",
+    "            n_negative = n_negative + 1\n",
+    "    return n_negative\n",
+    "\n",
+    "print(count_negatives([5, -1, -2, 0, 3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_negatives(nums): \n",
+    "    \"\"\"Return the number of negative numbers in the given list.\n",
+    "    \n",
+    "    >>> count_negatives([5, -1, -2, 0, 3])\n",
+    "    2\n",
+    "    \"\"\"\n",
+    "    return sum([1 for num in nums if num < 0])\n",
+    "\n",
+    "print(count_negatives([5, -1, -2, 0, 3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_negatives(nums):\n",
+    "    return len([num for num in nums if num < 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_negatives(nums):\n",
+    "    # Reminder: in the \"booleans and conditionals\" exercises,\n",
+    "    # we learned about a quirk of Python where it calculates \n",
+    "    # something like True + True + False + True to be equal to 3.\n",
+    "    return sum([num < 0 for num in nums])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercicios"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2.\n",
+    "Look at the Python expression below. What do you think we'll get when we run it? When you've made your prediction, uncomment the code and run the cell to see if you were right.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "R and Python have some libraries (like numpy and pandas) compare each element of the list to 2 (i.e. do an 'element-wise' comparison) and give us a list of booleans like `[False, False, True, True]`. \n",
+    "\n",
+    "Implement a function that reproduces this behaviour, returning a list of booleans corresponding to whether the corresponding element is greater than n."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def elementwise_greater_than(L, thresh):\n",
+    "    \"\"\"Return a list with the same length as L, where the value at index i is \n",
+    "    True if L[i] is greater than thresh, and False otherwise.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    pass\n",
+    "    return [num > thresh for num in L]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False, False, True, True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(elementwise_greater_than([1,2,3,4], 2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3.\n",
+    "\n",
+    "Complete the body of the function below according to its docstring."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def menu_is_boring(meals):\n",
+    "    # Iterate over all indices of the list, except the last one\n",
+    "    for i in range(len(meals)-1):\n",
+    "        if meals[i] == meals[i+1]:\n",
+    "            return True\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -143,7 +491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
