--- a/IntroToML/Exercises/2-MLModeling.ipynb
+++ b/IntroToML/Exercises/2-MLModeling.ipynb
@@ -23,10 +23,157 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercises\n",
+    "\n",
+    "## Step 1: Specify Prediction Target\n",
+    "Select the target variable, which corresponds to the sales price. Save this to a new variable called `y`. You'll need to print a list of the columns to find the name of the column you need.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# print the list of columns in the dataset to find the name of the prediction target\n",
+    "home_data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = home_data['SalePrice']\n",
+    "\n",
+    "# Check your answer\n",
+    "step_1.check()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 2: Create X\n",
+    "Now you will create a DataFrame called `X` holding the predictive features.\n",
+    "\n",
+    "Since you want only some columns from the original data, you'll first create a list with the names of the columns you want in `X`.\n",
+    "\n",
+    "You'll use just the following columns in the list (you can copy and paste the whole list to save some typing, though you'll still need to add quotes):\n",
+    "  * LotArea\n",
+    "  * YearBuilt\n",
+    "  * 1stFlrSF\n",
+    "  * 2ndFlrSF\n",
+    "  * FullBath\n",
+    "  * BedroomAbvGr\n",
+    "  * TotRmsAbvGrd\n",
+    "\n",
+    "After you've created that list of features, use it to create the DataFrame that you'll use to fit the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the list of features below\n",
+    "feature_names = ['LotArea', 'YearBuilt', '1stFlrSF', '2ndFlrSF', 'FullBath', 'BedroomAbvGr', 'TotRmsAbvGrd']\n",
+    "\n",
+    "# Select data corresponding to features in feature_names\n",
+    "X = home_data[feature_names]\n",
+    "\n",
+    "# Check your answer\n",
+    "step_2.check()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Review Data\n",
+    "Before building a model, take a quick look at **X** to verify it looks sensible"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Review data\n",
+    "# print description or statistics from X\n",
+    "print(X.describe())\n",
+    "\n",
+    "# print the top few lines\n",
+    "print(X.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 3: Specify and Fit Model\n",
+    "Create a `DecisionTreeRegressor` and save it iowa_model. Ensure you've done the relevant import from sklearn to run this command.\n",
+    "\n",
+    "Then fit the model you just created using the data in `X` and `y` that you saved above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "#specify the model. \n",
+    "#For model reproducibility, set a numeric value for random_state when specifying the model\n",
+    "iowa_model = DecisionTreeRegressor(random_state=1)\n",
+    "\n",
+    "# Fit the model\n",
+    "iowa_model.fit(X, y)\n",
+    "\n",
+    "# Check your answer\n",
+    "step_3.check()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 4: Make Predictions\n",
+    "Make predictions with the model's `predict` command using `X` as the data. Save the results to a variable called `predictions`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = iowa_model.predict(X)\n",
+    "print(predictions)\n",
+    "\n",
+    "# Check your answer\n",
+    "step_4.check()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Think About Your Results\n",
+    "\n",
+    "Use the `head` method to compare the top few predictions to the actual home values (in `y`) for those same homes. Anything surprising?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
